--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "version": 1,
+    "version": "1",
     "tools": {
         "temperature": {
-            "label": "Temperature",
-            "path": "temperature.html"
+            "label": "Temperatures",
+            "path": "temperatures.html"
         }
     },
     "content-security-policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval'"
