--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
             "path": "temperatures.html"
         }
     },
-    "content-security-policy": "default-src 'self'"
+    "content-security-policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval'"
 }
